--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^12.0.7",
+    "next": "^12.0.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redis-om": "^0.1.7"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.2.5"
+    "@netlify/plugin-nextjs": "^4.2.5",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.20"
   }
 }
